Avoid zoom in on input focus, in the webapp on mobile devices
Set LanguageSelector's input font-size to 16px on mobile devices.

Add SASS mixins "webapp" and "webapp-mobile" to write specific CSS for those clients.

--- a/src/css/include.sass
+++ b/src/css/include.sass
@@ -1,3 +1,12 @@
 =dark-mode()
     html[theme=dark] &
         @content
+
+=webapp()
+    html[webapp] &
+        @content
+
+=webapp-mobile()
+    @media (max-width: 600px)
+        html[webapp] &
+            @content
